--- a/index.css
+++ b/index.css
@@ -1,60 +1,171 @@
+@font-face {
+    font-family: Inter;
+    src: url("/Inter/Inter-Regular.woff");
+}
 *{
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-family: 'Inter', Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
 body {
-    background-color: rgba(63, 63, 63, 0);
+    background-color: rgb(63, 63, 63);
+    overflow: hidden;
 }
+.visible {
+    width: 100%;
+    height: 95vh;
+    transition: all 1s;
+}
+
+#menu {
+    list-style: none;
+    display: flex;
+    justify-content: flex-end;
+}
+#menu li {
+    margin-right: 10px;
+    color: rgb(140, 45, 218);
+    text-decoration: none;
+    transition: color 0.7s;
+    font-size: 2em;
+    font-weight: 600;
+    cursor: pointer;
+}
+#menu li:hover {
+    color: rgb(255, 127, 127);
+}
+.active {
+    color: rgb(250, 72, 72)!important;
+}
+#nav-check {
+    display: none;
+}
+
+
+.home {
+    display: flex;
+    width: 100%;
+    max-width: 1500px;
+    padding: 1em;
+    height: auto;
+    margin: auto;
+    margin-top: 25vh;
+}
+.home img {
+    width: 320px;
+    height: 320px;
+    max-height: 320px;
+    border-radius: 3em;
+    margin-right: 50px;
+    transition: all 1s;
+}
+.home img:hover {
+    transform: scale(1.1);
+}
+.home p {
+    color: rgb(240, 48, 112);
+    font-size: 1.5em; 
+    vertical-align: middle;
+}
+.home p:hover {
+    color: rgb(241, 241, 241);
+}
+
 .projects {
     width: 100%;
-    height: 98vh;
-    margin: auto;
+    height: 95vh;
     margin: auto;
     background-color: rgba(128, 128, 128, 0);
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     text-align: center;
-    box-sizing: border-box;
     z-index: 1;
     background: none;
+    transition: all 1s;
 }
 .project {
     margin: auto;
     font-weight: 100;
-    padding: 20px;
-    text-transform: uppercase;
-    border-radius: 6px;
-    display: inline-block;
-    transition: all 0.3s ease 0s;
-    background-color: rgba(255, 145, 255, 0.404);
-}
-
-.project img {
-    width: 30vh;
+    width: 20%;
     height: auto;
+    padding: 1em;
+    font-size: 1.5em;
+    border-radius: 1em;
+    transition: all 0.3s ease 0s;
+    background-color: rgba(146, 135, 160, 0.137);
+    box-shadow: 2px 1px rgba(39, 38, 38, 0.329);
 }
-
-.project {
-    border: none;
-    color: #ffffff !important;
-    font-weight: 100;
-    padding: 20px;
-    text-transform: uppercase;
-    border-radius: 6px;
-    display: inline-block;
+.project img {
+    width: 100%;
+    max-height: 300px;
+    height: auto;
+    transition: all 1.5s ease;
+}
+.project a {
+    text-decoration: none;
+    color: #b327c0;
+}
+.project p {
+    font-family: "inter";
+    font-weight: 500;
+    color: #b327c0;
 }
 .project:hover {
-    color: #404040 !important;
     font-weight: 700 !important;
-    font-size: 3vh;
+    font-size: 1.5em;
     background: none;
-    background-color:rgba(238, 130, 238, 0.664);
+    background-color:rgba(48, 47, 47, 0.404);
+    box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
     -webkit-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
     -moz-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
-}
-.project:hover img {
-    width: 40vh;
+    scale: 1.1;
     transition: all 1.5s ease;
+}
+.project:hover p {
+    color: white;
+}
+
+
+.skills {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap;
+    width: 90%;
+    margin: auto;
+    margin-top: 1em;
+    height: 80vh;
+}
+.skill {
+    background-color: rgba(118, 92, 151, 0.055);
+    display: flex;
+    width: 40%;
+    height: 30%;
+    flex-direction: column;
+    text-align: left;
+    margin: 1em;
+    padding: 0.5em;
+    border-radius: 2em;
+    transition: all 1s ease;
+    box-shadow: 2px 1px rgba(39, 38, 38, 0.329);
+}
+.svg {
+    margin: auto;
+}
+
+.skill p {
+    font-family: 'Inter', sans-serif;
+    font-size: 1em;
+    font-weight: 650;
+    transition: all 1s ease;
+}
+.skill:hover {
+    background-color: rgba(141, 132, 153, 0.61);
+}
+.skill:hover p {
+    color: #fffeff;
+}
+#html-css-svg {
+    margin: auto;
 }
 
 #demo-canvas {
@@ -71,3 +182,232 @@ body {
     left: 0;
     background-color: #404040;
 }
+
+.contact-form {
+    max-width: 800px;
+    width: 70%;
+    height: 70vh;
+    margin: 0 auto;
+    margin-top: 10vh;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    transition: all 1s;
+}
+
+.contact-form p{
+    color: #a02bee;
+    font-size: 1.3em;
+    transition: all 0.7s;
+}
+.contact-form p:hover {
+    color: #fffeff;
+}
+
+/*--------------------------*/
+
+.social-links {
+    margin-top: 10px;
+}
+
+.social-links img {
+    width: 30px;
+    height: auto;
+    margin-right: 10px;
+    transition: all 0.7s;
+}
+.social-links img:hover {
+    width: 40px;
+    height: auto;
+}
+
+/*--------------------------*/
+
+label {
+    display: block;
+    text-align: left;
+    font-weight: 600;
+    color: #b327c0;
+    font-size: 1.3em;
+}
+
+textarea {
+    width: 80%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    font-size: 16px;
+    margin-bottom: 3vh;
+}
+
+input {
+    padding: 5px;
+}
+textarea {
+    resize: vertical;
+    height: 10vh;
+}
+
+button {
+    background-color: #007BFF;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+    margin: 20px 0;
+    width: 20vw;
+    transition: background-color 0.3s;
+}
+
+button:hover {
+    background-color: #0056b3;
+}
+
+.hidden {
+    display: none;
+}
+
+@media (max-height: 880px) {
+    .projects {
+        height: 85vh;
+        font-size: .8em;
+    }
+    .project {
+        height: 70%;
+    }
+    .skills {
+        height: 80vh;
+        width: 100%;
+    }
+    .skill {
+        width: 25%;
+        height: 50%;
+        margin: 5px;
+    }
+}
+
+@media (max-height: 650px) {
+    body {
+        overflow-y: scroll;
+    }
+}
+
+@media (max-width: 900px) {
+    body {
+        overflow-x: hidden;
+        overflow-y: scroll;
+    }
+    .home {
+        flex-direction: column-reverse;
+        margin-top: 25%;
+    }
+    .home p {
+        font-size: 1.5em;
+    }
+    .home img {
+        margin: auto;
+    }
+
+    /* ----------------- */
+
+    .projects {
+        flex-direction: column;
+        flex-wrap: nowrap;
+        width: 100%;
+        height: 120vh;
+    }
+    .project {
+        width: 70%;
+        margin-bottom: 2em;
+        font-weight: 700;
+    }
+    .project:hover {
+        width: 75%;
+    }
+
+    /* ---------------- */
+    .skills {
+        flex-direction: column;
+        flex-wrap: nowrap;
+        height: 200vh;
+    }
+    .skill {
+        margin: auto;
+        margin-bottom: 2em;
+        width: 90%;
+        height: auto;
+    }
+}
+
+@media (max-width: 480px) {
+    body {
+        overflow: scroll;
+    }
+    .home {
+        width: 100%;
+        margin: auto;
+        margin-top: 3em;
+        padding: 0;
+        height: 90vh;
+    }
+    .home p {
+        color: white;
+        width: 90%;
+        margin: auto;
+        margin-top: .5em;
+        text-align: center;
+        font-size: 1.2em;
+    }
+
+    .nav-btn {
+        display: inline-block;
+        position: absolute;
+        right: 0;
+        top: 0;
+        padding-top: 0.2rem;
+    }
+    .nav-btn > label {
+        display: inline-block;
+        width: 50px;
+        height: 50px;
+        padding: 13px;
+    }
+    .nav-btn > label > span {
+        display: block;
+        width: 25px;
+        height: 10px;
+        border-top: 2px solid #eee;
+    }
+    #menu {
+        position: absolute;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        gap: 1rem;
+        width: 100%;
+        background-color: #404040;
+        height: 0;
+        transition: all 0.3s ease-in;
+        top: 40px;
+        left: 0;
+        overflow: hidden;
+    }
+    #menu > li {
+    width: 100%;
+    margin-top: 1em;
+    }
+    #nav-check:checked ~ #menu {
+    height: calc(55vh - 50px);
+    }
+    .skills {
+        flex-direction: column;
+        flex-wrap: nowrap;
+        height: 200vh;
+    }
+}
+
