--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: Inter;
-    src: url("/Inter/Inter-Regular.woff");
+    src: url("./Inter/Inter-Regular.woff");
 }
 *{
     font-family: 'Inter', Haettenschweiler, 'Arial Narrow Bold', sans-serif;
