--- a/index.css
+++ b/index.css
@@ -1,413 +1,410 @@
 @font-face {
-    font-family: Inter;
-    src: url("./Inter/Inter-Regular.woff");
+  font-family: Inter;
+  src: url("/Inter/Inter-Regular.woff");
 }
-*{
-    font-family: 'Inter', Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+* {
+  font-family: "Inter", Haettenschweiler, "Arial Narrow Bold", sans-serif;
 }
 body {
-    background-color: rgb(63, 63, 63);
-    overflow: hidden;
+  background-color: rgb(63, 63, 63);
+  overflow: hidden;
 }
 .visible {
-    width: 100%;
-    height: 95vh;
-    transition: all 1s;
+  width: 100%;
+  height: 95vh;
+  transition: all 1s;
 }
 
 #menu {
-    list-style: none;
-    display: flex;
-    justify-content: flex-end;
+  list-style: none;
+  display: flex;
+  justify-content: flex-end;
 }
 #menu li {
-    margin-right: 10px;
-    color: rgb(140, 45, 218);
-    text-decoration: none;
-    transition: color 0.7s;
-    font-size: 2em;
-    font-weight: 600;
-    cursor: pointer;
+  margin-right: 10px;
+  color: #ffc815;
+  text-decoration: none;
+  font-size: 2em;
+  font-weight: 600;
+  cursor: pointer;
+  padding: 0 5px;
+  transition: all .5s;
 }
 #menu li:hover {
-    color: rgb(255, 127, 127);
+  color: #ffffff;
+  scale: 1.1;
 }
 .active {
-    color: rgb(250, 72, 72)!important;
+  color: #ffffff !important;
 }
 #nav-check {
-    display: none;
+  display: none;
 }
-
 
 .home {
-    display: flex;
-    width: 100%;
-    max-width: 1500px;
-    padding: 1em;
-    height: auto;
-    margin: auto;
-    margin-top: 25vh;
+  display: flex;
+  width: 100%;
+  max-width: 1500px;
+  padding: 1em;
+  height: auto;
+  margin: auto;
+  margin-top: 25vh;
 }
 .home img {
-    width: 320px;
-    height: 320px;
-    max-height: 320px;
-    border-radius: 3em;
-    margin-right: 50px;
-    transition: all 1s;
+  width: 320px;
+  height: 320px;
+  max-height: 320px;
+  border-radius: 3em;
+  margin-right: 50px;
+  transition: all 1s;
 }
 .home img:hover {
-    transform: scale(1.1);
+  transform: scale(1.1);
 }
 .home p {
-    color: rgb(240, 48, 112);
-    font-size: 1.5em; 
-    vertical-align: middle;
+  color: #ffc815;
+  font-size: 1.5em;
+  line-height: 1.5em;
+  height: fit-content;
 }
 .home p:hover {
-    color: rgb(241, 241, 241);
+  color: rgb(255, 255, 255);
 }
 
 .projects {
-    width: 100%;
-    height: 95vh;
-    margin: auto;
-    background-color: rgba(128, 128, 128, 0);
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    text-align: center;
-    z-index: 1;
-    background: none;
-    transition: all 1s;
+  width: 100%;
+  height: 95vh;
+  margin: auto;
+  background-color: rgba(128, 128, 128, 0);
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  text-align: center;
+  z-index: 1;
+  background: none;
+  transition: all 1s;
 }
 .project {
-    margin: auto;
-    font-weight: 100;
-    width: 20%;
-    height: auto;
-    padding: 1em;
-    font-size: 1.5em;
-    border-radius: 1em;
-    transition: all 0.3s ease 0s;
-    background-color: rgba(146, 135, 160, 0.137);
-    box-shadow: 2px 1px rgba(39, 38, 38, 0.329);
+  margin: auto;
+  font-weight: 100;
+  width: 20%;
+  height: auto;
+  padding: 1em;
+  font-size: 1.5em;
+  border-radius: 1em;
+  transition: all 0.3s ease 0s;
+  background-color: rgba(146, 135, 160, 0.137);
+  box-shadow: 2px 1px rgba(39, 38, 38, 0.329);
 }
 .project img {
-    width: 100%;
-    max-height: 300px;
-    height: auto;
-    transition: all 1.5s ease;
+  width: 100%;
+  max-height: 300px;
+  height: auto;
+  transition: all 1.5s ease;
 }
 .project a {
-    text-decoration: none;
-    color: #b327c0;
+  text-decoration: none;
+  color: #ffc815;
 }
 .project p {
-    font-family: "inter";
-    font-weight: 500;
-    color: #b327c0;
+  font-family: "inter";
+  font-weight: 500;
+  color: #ffc815;
 }
 .project:hover {
-    font-weight: 700 !important;
-    font-size: 1.5em;
-    background: none;
-    background-color:rgba(48, 47, 47, 0.404);
-    box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
-    -webkit-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
-    -moz-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
-    scale: 1.1;
-    transition: all 1.5s ease;
+  font-weight: 700 !important;
+  font-size: 1.5em;
+  background: none;
+  background-color: rgba(48, 47, 47, 0.404);
+  box-shadow: 0px 5px 40px -10px rgba(0, 0, 0, 0.57);
+  -webkit-box-shadow: 0px 5px 40px -10px rgba(0, 0, 0, 0.57);
+  -moz-box-shadow: 0px 5px 40px -10px rgba(0, 0, 0, 0.57);
+  scale: 1.1;
+  transition: all 1.5s ease;
 }
 .project:hover p {
-    color: white;
+  color: white;
+  scale: 1.1;
 }
-
 
 .skills {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    flex-wrap: wrap;
-    width: 90%;
-    margin: auto;
-    margin-top: 1em;
-    height: 80vh;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  flex-wrap: wrap;
+  width: 90%;
+  margin: auto;
+  margin-top: 1em;
+  height: 80vh;
 }
 .skill {
-    background-color: rgba(118, 92, 151, 0.055);
-    display: flex;
-    width: 40%;
-    height: 30%;
-    flex-direction: column;
-    text-align: left;
-    margin: 1em;
-    padding: 0.5em;
-    border-radius: 2em;
-    transition: all 1s ease;
-    box-shadow: 2px 1px rgba(39, 38, 38, 0.329);
+  background-color: rgba(141, 132, 153, 0.247);
+  display: flex;
+  width: 40%;
+  height: 30%;
+  flex-direction: column;
+  text-align: center;
+  margin: 1em;
+  padding: 0.5em;
+  border-radius: 2em;
+  transition: all 1s ease;
+  box-shadow: 2px 1px rgba(39, 38, 38, 0.329);
 }
 .svg {
-    margin: auto;
+  margin: auto;
 }
 
 .skill p {
-    font-family: 'Inter', sans-serif;
-    font-size: 1em;
-    font-weight: 650;
-    transition: all 1s ease;
+  font-family: "Inter", sans-serif;
+  font-size: 1em;
+  font-weight: 500;
+  transition: all 1s ease;
+  color: #ffc815;
 }
-.skill:hover {
-    background-color: rgba(141, 132, 153, 0.61);
-}
-.skill:hover p {
-    color: #fffeff;
-}
+
 #html-css-svg {
-    margin: auto;
+  margin: auto;
 }
 
 #demo-canvas {
-    z-index: -1;
-    position: absolute;
-    top: 0;
-    left: 0;
-    background: none;
+  z-index: -1;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: none;
 }
 #demo-canvas2 {
-    z-index: -2;
-    position: absolute;
-    top: 0;
-    left: 0;
-    background-color: #404040;
+  z-index: -2;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: #414141;
 }
 
 .contact-form {
-    max-width: 800px;
-    width: 70%;
-    height: 70vh;
-    margin: 0 auto;
-    margin-top: 10vh;
-    padding: 20px;
-    border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    transition: all 1s;
+  max-width: 800px;
+  width: 70%;
+  height: 70vh;
+  margin: 0 auto;
+  margin-top: 10vh;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  transition: all 1s;
 }
 
-.contact-form p{
-    color: #a02bee;
-    font-size: 1.3em;
-    transition: all 0.7s;
+.contact-form p {
+  color: #ffc815;
+  font-size: 1.3em;
+  transition: all 0.7s;
 }
 .contact-form p:hover {
-    color: #fffeff;
+  color: #fffeff;
 }
 
 /*--------------------------*/
 
 .social-links {
-    margin-top: 10px;
+  margin-top: 10px;
 }
 
 .social-links img {
-    width: 30px;
-    height: auto;
-    margin-right: 10px;
-    transition: all 0.7s;
+  width: 30px;
+  height: auto;
+  margin-right: 10px;
+  transition: all 0.7s;
 }
 .social-links img:hover {
-    width: 40px;
-    height: auto;
+  width: 40px;
+  height: auto;
 }
 
 /*--------------------------*/
 
 label {
-    display: block;
-    text-align: left;
-    font-weight: 600;
-    color: #b327c0;
-    font-size: 1.3em;
+  display: block;
+  text-align: left;
+  font-weight: 600;
+  color: #ffc815;
+  font-size: 1.3em;
 }
 
 textarea {
-    width: 80%;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    font-size: 16px;
-    margin-bottom: 3vh;
+  width: 80%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-size: 16px;
+  margin-bottom: 3vh;
 }
 
 input {
-    padding: 5px;
+  padding: 5px;
 }
 textarea {
-    resize: vertical;
-    height: 10vh;
+  resize: vertical;
+  height: 10vh;
 }
 
 button {
-    background-color: #007BFF;
-    color: #fff;
-    border: none;
-    padding: 10px 20px;
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: 16px;
-    margin: 20px 0;
-    width: 20vw;
-    transition: background-color 0.3s;
+  background-color: #585858;
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 16px;
+  margin: 20px 0;
+  width: 20vw;
+  transition: background-color 0.3s;
 }
 
 button:hover {
-    background-color: #0056b3;
+  background-color: #0056b3;
 }
 
 .hidden {
-    display: none;
+  display: none;
 }
 
 @media (max-height: 880px) {
-    .projects {
-        height: 85vh;
-        font-size: .8em;
-    }
-    .project {
-        height: 70%;
-    }
-    .skills {
-        height: 80vh;
-        width: 100%;
-    }
-    .skill {
-        width: 25%;
-        height: 50%;
-        margin: 5px;
-    }
+  .projects {
+    height: 85vh;
+    font-size: 0.8em;
+  }
+  .project {
+    height: 70%;
+  }
+  .skills {
+    height: 80vh;
+    width: 100%;
+  }
+  .skill {
+    width: 25%;
+    height: 50%;
+    margin: 5px;
+  }
 }
 
 @media (max-height: 650px) {
-    body {
-        overflow-y: scroll;
-    }
+  body {
+    overflow-y: scroll;
+  }
 }
 
 @media (max-width: 900px) {
-    body {
-        overflow-x: hidden;
-        overflow-y: scroll;
-    }
-    .home {
-        flex-direction: column-reverse;
-        margin-top: 25%;
-    }
-    .home p {
-        font-size: 1.5em;
-    }
-    .home img {
-        margin: auto;
-    }
+  body {
+    overflow-x: hidden;
+    overflow-y: scroll;
+  }
+  .home {
+    flex-direction: column-reverse;
+    margin-top: 25%;
+  }
+  .home p {
+    font-size: 1.5em;
+  }
+  .home img {
+    margin: auto;
+  }
 
-    /* ----------------- */
+  /* ----------------- */
 
-    .projects {
-        flex-direction: column;
-        flex-wrap: nowrap;
-        width: 100%;
-        height: 120vh;
-    }
-    .project {
-        width: 70%;
-        margin-bottom: 2em;
-        font-weight: 700;
-    }
-    .project:hover {
-        width: 75%;
-    }
+  .projects {
+    flex-direction: column;
+    flex-wrap: nowrap;
+    width: 100%;
+    height: 120vh;
+  }
+  .project {
+    width: 70%;
+    margin-bottom: 2em;
+    font-weight: 700;
+  }
+  .project:hover {
+    width: 75%;
+  }
 
-    /* ---------------- */
-    .skills {
-        flex-direction: column;
-        flex-wrap: nowrap;
-        height: 200vh;
-    }
-    .skill {
-        margin: auto;
-        margin-bottom: 2em;
-        width: 90%;
-        height: auto;
-    }
+  /* ---------------- */
+  .skills {
+    flex-direction: column;
+    flex-wrap: nowrap;
+    height: 200vh;
+  }
+  .skill {
+    margin: auto;
+    margin-bottom: 2em;
+    width: 90%;
+    height: auto;
+  }
 }
 
 @media (max-width: 480px) {
-    body {
-        overflow: scroll;
-    }
-    .home {
-        width: 100%;
-        margin: auto;
-        margin-top: 3em;
-        padding: 0;
-        height: 90vh;
-    }
-    .home p {
-        color: white;
-        width: 90%;
-        margin: auto;
-        margin-top: .5em;
-        text-align: center;
-        font-size: 1.2em;
-    }
+  body {
+    overflow: scroll;
+  }
+  .home {
+    width: 100%;
+    margin: auto;
+    margin-top: 3em;
+    padding: 0;
+    height: 90vh;
+  }
+  .home p {
+    color: white;
+    width: 90%;
+    margin: auto;
+    margin-top: 0.5em;
+    text-align: center;
+    font-size: 1.2em;
+  }
 
-    .nav-btn {
-        display: inline-block;
-        position: absolute;
-        right: 0;
-        top: 0;
-        padding-top: 0.2rem;
-    }
-    .nav-btn > label {
-        display: inline-block;
-        width: 50px;
-        height: 50px;
-        padding: 13px;
-    }
-    .nav-btn > label > span {
-        display: block;
-        width: 25px;
-        height: 10px;
-        border-top: 2px solid #eee;
-    }
-    #menu {
-        position: absolute;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        gap: 1rem;
-        width: 100%;
-        background-color: #404040;
-        height: 0;
-        transition: all 0.3s ease-in;
-        top: 40px;
-        left: 0;
-        overflow: hidden;
-    }
-    #menu > li {
+  .nav-btn {
+    display: inline-block;
+    position: absolute;
+    right: 0;
+    top: 0;
+    padding-top: 0.2rem;
+  }
+  .nav-btn > label {
+    display: inline-block;
+    width: 50px;
+    height: 50px;
+    padding: 13px;
+  }
+  .nav-btn > label > span {
+    display: block;
+    width: 25px;
+    height: 10px;
+    border-top: 2px solid #eee;
+  }
+  #menu {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 1rem;
+    width: 100%;
+    background-color: #404040;
+    height: 0;
+    transition: all 0.3s ease-in;
+    top: 40px;
+    left: 0;
+    overflow: hidden;
+  }
+  #menu > li {
     width: 100%;
     margin-top: 1em;
-    }
-    #nav-check:checked ~ #menu {
+  }
+  #nav-check:checked ~ #menu {
     height: calc(55vh - 50px);
-    }
-    .skills {
-        flex-direction: column;
-        flex-wrap: nowrap;
-        height: 200vh;
-    }
+  }
+  .skills {
+    flex-direction: column;
+    flex-wrap: nowrap;
+    height: 200vh;
+  }
 }
-
